Fix ChromeOS users list multiple X problem.
- Use 'raw-button' for X button so that it fix the X image;
- Add a wrapper block to email and name text that fills up the space
  between icon and X button and has a max-width to avoid push X button
  out of view;

BUG=chromium-os:11220,chromium-os:10944
TEST=Verify fix for chromium-os:11220

Review URL: http://codereview.chromium.org/6380015

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@72810 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 45c84b63e3be4cc0494b0341051f1544f2f423d3

--- a/chrome/browser/resources/options/chromeos_accounts_options_page.css
+++ b/chrome/browser/resources/options/chromeos_accounts_options_page.css
@@ -11,7 +11,6 @@
 }
 
 .user-list-item {
-  line-height: 35px;
   padding: 2px;
 }
 
@@ -19,7 +18,6 @@
   border: 1px solid black;
   width: 26px;
   height: 26px;
-  vertical-align: middle;
 }
 
 .user-email-label {
@@ -31,23 +29,18 @@
   -webkit-margin-start: 10px;
 }
 
+.user-email-name-block {
+  -webkit-box-flex: 1;
+  max-width: 318px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .remove-user-button {
   background-image: url(chrome://theme/IDR_CLOSE_BAR);
-  background-color: transparent;
-  border: 0;
   width: 16px;
   height: 16px;
-  margin-top: 8px;
-  min-width: 16px;
-  padding: 1px 6px 1px 6px;
-}
-
-html[dir=ltr] .remove-user-button {
-  float: right;
-}
-
-html[dir=rtl] .remove-user-button {
-  float: left;
 }
 
 .remove-user-button:hover {
